[MU-263] Spacing fixes for social icons.

--- a/social_links/social_links.scss
+++ b/social_links/social_links.scss
@@ -24,6 +24,10 @@
 @mixin pnm_struct_social_links_container_inner() {
   margin-left: auto;
   margin-right: auto;
+  @include pnm_util_breakpoint(tablet) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 // =========================================================
@@ -32,11 +36,13 @@
 @mixin pnm_style_social_links_title($theme: $pnm_theme) {
   color: map-get($pnm_theme, 'white');
   font-size: pnm_util_unit(16px);
-  line-height: pnm_util_unit(36px);
+  margin-bottom: pnm_util_unit(14px);
+  @include pnm_util_breakpoint(tablet) {
+    margin-bottom: 0;
+  }
 }
 
 @mixin pnm_struct_social_links_title() {
-  display: inline;
   margin: 0 pnm_util_unit(16px) 0 0;
 }
 
@@ -49,9 +55,6 @@
 
 @mixin pnm_struct_social_links() {
   display: block;
-  @include pnm_util_breakpoint(tablet) {
-    display: inline;
-  }
 }
 
 // =========================================================
@@ -68,8 +71,12 @@
 
 @mixin pnm_struct_social_links_item() {
   display: inline-block;
-  margin-right: pnm_util_unit(8px);
   vertical-align: middle;
+  margin-right: pnm_util_unit(8px);
+  margin-bottom: pnm_util_unit(16px);
+  @include pnm_util_breakpoint(tablet) {
+    margin-bottom: 0;
+  }
 }
 
 // =========================================================
